deployment/NEW/hit_record_api_v1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hit-record-api-v1-deployment
  labels:
    app: hit-record-api-v1
  namespace: hitrecord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hit-record-api-v1
  template:
    metadata:
      labels:
        app: hit-record-api-v1
    spec:
      containers:
      - name: hit-record-api-v1
        image: fahadahammed/hit_record:latest
        ports:
        - containerPort: 22000
