deployment/NEW/hit_record_api_v2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hit-record-api-v2-service
  namespace: hitrecord
spec:
  type: ClusterIP
  selector:
    app: hit-record-api-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 22000
